objects/bizible2__Bizible_Attribution_Touchpoint__c.object
<CustomObject>
    <fields>
        <fullName>bizible2__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bizible Attribution Touchpoint</relationshipLabel>
        <relationshipName>Bizible_Attribution_Touchpoint</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible2__Ad_Campaign_Id__c</fullName>
        <label>Ad Campaign Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Ad_Campaign_Name__c</fullName>
        <label>Ad Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Ad_Content__c</fullName>
        <description>The title, copy, and display URL from the ad</description>
        <inlineHelpText>The title, copy, and display URL from the ad</inlineHelpText>
        <label>Ad Content</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bizible2__Ad_Destination_URL__c</fullName>
        <label>Ad Destination URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Ad_Group_Id__c</fullName>
        <label>Ad Group Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Ad_Group_Name__c</fullName>
        <label>Ad Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Ad_Id__c</fullName>
        <label>Ad Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Attribution_Custom_Model_2__c</fullName>
        <description>The percentage distributed for this touchpoint based on your custom attribution model</description>
        <inlineHelpText>The percentage distributed for this touchpoint based on your custom attribution model</inlineHelpText>
        <label>Attribution % Custom Model</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>bizible2__Attribution_Custom_Model__c</fullName>
        <description>The percentage distributed for this touchpoint based on a full path attribution model</description>
        <inlineHelpText>The percentage distributed for this touchpoint based on a full path attribution model</inlineHelpText>
        <label>Attribution % Full Path</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>bizible2__Attribution_First_Touch__c</fullName>
        <description>The percentage distributed for this touchpoint based on the first touch point</description>
        <inlineHelpText>The percentage distributed for this touchpoint based on the first touch point</inlineHelpText>
        <label>Attribution % First Touch</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>bizible2__Attribution_Lead_Conversion_Touch__c</fullName>
        <description>The percentage distributed for this touchpoint based on the lead creation point</description>
        <inlineHelpText>The percentage distributed for this touchpoint based on the lead creation point</inlineHelpText>
        <label>Attribution % Lead Creation Touch</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>bizible2__Attribution_U_Shaped__c</fullName>
        <description>The percentage distributed for this touchpoint based on a U-Shaped attribution model</description>
        <inlineHelpText>The percentage distributed for this touchpoint based on a U-Shaped attribution model</inlineHelpText>
        <label>Attribution % U-Shaped</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>bizible2__Attribution_W_Shaped__c</fullName>
        <description>The percentage distributed for this touchpoint based on a W-Shaped attribution model</description>
        <inlineHelpText>The percentage distributed for this touchpoint based on a W-Shaped attribution model</inlineHelpText>
        <label>Attribution % W-Shaped</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>bizible2__Browser__c</fullName>
        <description>The browser that the user is on while engaged in the activity</description>
        <inlineHelpText>The browser that the user is on while engaged in the activity</inlineHelpText>
        <label>Browser</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bizible Attribution Touchpoint</relationshipLabel>
        <relationshipName>Bizible_Attribution_Touchpoint</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible2__Count_Custom_Model_2__c</fullName>
        <description>The count distributed for this touchpoint based on your custom attribution model</description>
        <inlineHelpText>The count distributed for this touchpoint based on your custom attribution model</inlineHelpText>
        <label>Count - Custom Model</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bizible2__Count_Custom_Model__c</fullName>
        <description>The count distributed for this touchpoint based on a full path model</description>
        <inlineHelpText>The count distributed for this touchpoint based on a full path model</inlineHelpText>
        <label>Count - Full Path</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bizible2__Count_First_Touch__c</fullName>
        <description>The count for this touchpoint based on the first touch point</description>
        <inlineHelpText>The count for this touchpoint based on the first touch point</inlineHelpText>
        <label>Count - First Touch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bizible2__Count_Lead_Creation_Touch__c</fullName>
        <description>The count for this touchpoint based on the lead creation point</description>
        <inlineHelpText>The count for this touchpoint based on the lead creation point</inlineHelpText>
        <label>Count - Lead Creation Touch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bizible2__Count_U_Shaped__c</fullName>
        <description>The count distributed for this touchpoint based on a U-Shaped model</description>
        <inlineHelpText>The count distributed for this touchpoint based on a U-Shaped model</inlineHelpText>
        <label>Count - U-Shaped</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bizible2__Count_W_Shaped__c</fullName>
        <description>The count distributed for this touchpoint based on a W-Shaped model</description>
        <inlineHelpText>The count distributed for this touchpoint based on a W-Shaped model</inlineHelpText>
        <label>Count - W-Shaped</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bizible2__Form_Name__c</fullName>
        <label>Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Form_URL_Raw__c</fullName>
        <label>Form URL - Raw</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Form_URL__c</fullName>
        <description>The URL of the page where the form submission occurred</description>
        <inlineHelpText>The URL of the page where the form submission occurred</inlineHelpText>
        <label>Form URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Geo_City__c</fullName>
        <description>The city that the user is located in while engaged in the activity</description>
        <inlineHelpText>The city that the user is located in while engaged in the activity</inlineHelpText>
        <label>Geo City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Geo_Country__c</fullName>
        <description>The country that the user is located in while engaged in the activity</description>
        <inlineHelpText>The country that the user is located in while engaged in the activity</inlineHelpText>
        <label>Geo Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Geo_Region__c</fullName>
        <description>The larger geographic area that the user is located in while engaged in the activity</description>
        <inlineHelpText>The larger geographic area that the user is located in while engaged in the activity</inlineHelpText>
        <label>Geo Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Keyword_Id__c</fullName>
        <label>Keyword Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Keyword_MatchType__c</fullName>
        <description>The level of matching with the keyword (ex. phrase, broad)</description>
        <inlineHelpText>The level of matching with the keyword (ex. phrase, broad)</inlineHelpText>
        <label>Keyword MatchType</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Keyword_Text__c</fullName>
        <description>Keywords chosen by the advertiser that match the user&apos;s search results</description>
        <inlineHelpText>Keywords chosen by the advertiser that match the user&apos;s search results</inlineHelpText>
        <label>Keyword Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Landing_Page_Raw__c</fullName>
        <label>Landing Page - Raw</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Landing_Page__c</fullName>
        <label>Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Marketing_Channel_Path__c</fullName>
        <description>The whole path of the Marketing Channel including any custom Sub Channels</description>
        <inlineHelpText>The whole path of the Marketing Channel including any custom Sub Channels</inlineHelpText>
        <label>Marketing Channel - Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Marketing_Channel__c</fullName>
        <description>The type of marketing activity</description>
        <inlineHelpText>The type of marketing activity</inlineHelpText>
        <label>Marketing Channel</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Medium__c</fullName>
        <description>The channel being used (ex. web, search, email)</description>
        <inlineHelpText>The channel being used (ex. web, search, email)</inlineHelpText>
        <label>Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Bizible Attribution Touchpoint</relationshipLabel>
        <relationshipName>Bizible_Attribution_Touchpoint</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible2__Placement_Id__c</fullName>
        <label>Placement Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Placement_Name__c</fullName>
        <label>Placement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Platform__c</fullName>
        <description>The operating system that the user is on while engaged in the activity</description>
        <inlineHelpText>The operating system that the user is on while engaged in the activity</inlineHelpText>
        <label>Platform</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Referrer_Page_Raw__c</fullName>
        <description>The URL of the referring website</description>
        <inlineHelpText>The URL of the referring website</inlineHelpText>
        <label>Referrer Page - Raw</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Referrer_Page__c</fullName>
        <label>Referrer Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>bizible2__Revenue_Custom_Model_2__c</fullName>
        <description>The amount distributed for this touchpoint based on your custom attribution model</description>
        <formula>if($Setup.bizible2__bizibleSettings__c.bizible2__Use_Custom_Amount_Field__c, 
bizible2__Opportunity__r.bizible2__Bizible_Opportunity_Amount__c * bizible2__Attribution_Custom_Model_2__c , 
bizible2__Opportunity__r.Amount * bizible2__Attribution_Custom_Model_2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The amount distributed for this touchpoint based on your custom attribution model</inlineHelpText>
        <label>Revenue - Custom Model</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bizible2__Revenue_Custom_Model__c</fullName>
        <description>The amount distributed for this touchpoint based on a full path attribution model</description>
        <formula>if($Setup.bizible2__bizibleSettings__c.bizible2__Use_Custom_Amount_Field__c, 
bizible2__Opportunity__r.bizible2__Bizible_Opportunity_Amount__c *  bizible2__Attribution_Custom_Model__c, 
bizible2__Opportunity__r.Amount * bizible2__Attribution_Custom_Model__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The amount distributed for this touchpoint based on a full path attribution model</inlineHelpText>
        <label>Revenue - Full Path</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bizible2__Revenue_First_Touch__c</fullName>
        <description>The amount distributed for this touchpoint based on the first touch attribution model</description>
        <formula>if($Setup.bizible2__bizibleSettings__c.bizible2__Use_Custom_Amount_Field__c,
   bizible2__Opportunity__r.bizible2__Bizible_Opportunity_Amount__c * bizible2__Attribution_First_Touch__c,
   bizible2__Opportunity__r.Amount * bizible2__Attribution_First_Touch__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The amount distributed for this touchpoint based on the first touch attribution model</inlineHelpText>
        <label>Revenue - First Touch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bizible2__Revenue_Lead_Conversion__c</fullName>
        <description>The amount distributed for this touchpoint based on the lead creation attribution model</description>
        <formula>if($Setup.bizible2__bizibleSettings__c.bizible2__Use_Custom_Amount_Field__c,
   bizible2__Opportunity__r.bizible2__Bizible_Opportunity_Amount__c * bizible2__Attribution_Lead_Conversion_Touch__c,
   bizible2__Opportunity__r.Amount * bizible2__Attribution_Lead_Conversion_Touch__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The amount distributed for this touchpoint based on the lead creation attribution model</inlineHelpText>
        <label>Revenue - Lead Creation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bizible2__Revenue_U_Shaped__c</fullName>
        <description>The amount distributed for this touchpoint based on a U-Shaped attribution model</description>
        <formula>if($Setup.bizible2__bizibleSettings__c.bizible2__Use_Custom_Amount_Field__c,
   bizible2__Opportunity__r.bizible2__Bizible_Opportunity_Amount__c * bizible2__Attribution_U_Shaped__c,
   bizible2__Opportunity__r.Amount * bizible2__Attribution_U_Shaped__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The amount distributed for this touchpoint based on a U-Shaped attribution model</inlineHelpText>
        <label>Revenue - U-Shaped</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bizible2__Revenue_W_Shaped__c</fullName>
        <description>The amount distributed for this touchpoint based on a W-Shaped attribution model</description>
        <formula>if($Setup.bizible2__bizibleSettings__c.bizible2__Use_Custom_Amount_Field__c,
   bizible2__Opportunity__r.bizible2__Bizible_Opportunity_Amount__c * bizible2__Attribution_W_Shaped__c,
   bizible2__Opportunity__r.Amount * bizible2__Attribution_W_Shaped__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The amount distributed for this touchpoint based on a W-Shaped attribution model</inlineHelpText>
        <label>Revenue - W-Shaped</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bizible2__SF_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Bizible Attribution Touchpoint</relationshipLabel>
        <relationshipName>Bizible_Attribution_Touchpoint</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible2__Search_Phrase__c</fullName>
        <description>The term(s) that the user entered to view the search results</description>
        <inlineHelpText>The term(s) that the user entered to view the search results</inlineHelpText>
        <label>Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Segment__c</fullName>
        <description>Custom values that are tagged on the touchpoint for reporting</description>
        <inlineHelpText>Custom values that are tagged on the touchpoint for reporting</inlineHelpText>
        <label>Segment</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bizible2__Site_Id__c</fullName>
        <label>Site Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Site_Name__c</fullName>
        <label>Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Date__c</fullName>
        <description>The date that the session activity occurred</description>
        <inlineHelpText>The date that the session activity occurred</inlineHelpText>
        <label>Touchpoint Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Position__c</fullName>
        <description>The order in which the touchpoint occurred</description>
        <inlineHelpText>The order in which the touchpoint occurred</inlineHelpText>
        <label>Touchpoint Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Source__c</fullName>
        <description>The specific origin of the touchpoint</description>
        <inlineHelpText>The specific origin of the touchpoint</inlineHelpText>
        <label>Touchpoint Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Type__c</fullName>
        <description>The interaction that resulted in the attribution</description>
        <inlineHelpText>The interaction that resulted in the attribution</inlineHelpText>
        <label>Touchpoint Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__UniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>bizible2__User_Touchpoint_Id_V2__c</fullName>
        <description>User touchpoint id associated to the attribution touchpoint.</description>
        <label>User Touchpoint Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bizible Attribution Touchpoint</label>
    <nameField>
        <label>Attribution Touchpoint</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bizible Attribution Touchpoint</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>